Fix Java 11 compilation: replace Stream.toList() with Collectors.toList()
Stream.toList() requires Java 16+ but CI builds with Java 11.